--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "langgraph (>=0.6.8,<0.7.0)",
     "langchain (>=0.3.27)",  # Removed upper bound
     "pydantic-settings (>=2.11.0,<3.0.0)",
-    "langchain-openai (>=0.3.34,<0.4.0)"
+    "langchain-openai (>=0.3.34,<0.4.0)",
+    "reportlab (>=4.2.0,<5.0.0)",
+    "pandas (>=2.2.2,<3.0.0)",
+    "matplotlib (>=3.9.0,<4.0.0)",
 ]
 
 [build-system]
