--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,14 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "uvicorn (>=0.37.0,<0.38.0)",
-    "langchain-google-genai (<2.1.12)",
     "langgraph (>=0.6.8,<0.7.0)",
-    "langchain (>=0.3.27)",  # Removed upper bound
+    "langchain (>=0.3.27)",
+    "langchain-community (>=0.3.0)",
     "pydantic-settings (>=2.11.0,<3.0.0)",
-    "langchain-openai (>=0.3.34,<0.4.0)",
     "reportlab (>=4.2.0,<5.0.0)",
     "pandas (>=2.2.2,<3.0.0)",
     "matplotlib (>=3.9.0,<4.0.0)",
+    "gigachat (>=0.1.0)",
 ]
 
 [build-system]
